# ENT3C

./: .ENT3C.m.swp  .README.md.swp  .gitignore  CHANGELOG.md  ChrInfo.m  ENT3C.asv  ENT3C.jl  ENT3C.m  ENT3C.spec  ENT3C_OUT.csv  ENT3C_exe.spec  ENT3C_git.python.code-workspace  ENT3C_similarity.csv  Manifest.toml  Project.toml  README.md  README_PyPi.md  config.json  config.multiResolution.pooledBRs.json  config.normtest.json  example.asv  example.jl  example.m  get_pairwise_combs.asv  get_pairwise_combs.m  load_cooler.asv  load_cooler.jl  load_cooler.m  pyproject.toml  requirements.txt  setup.py  test.py
JULIA/: ent3c_functions.jl  example.jl
JULIA_functions/: .ent3c_functions.jl.swp  chrdict.jl  ent3c_functions.jl
MATLAB/: ENT3C.m  example.m  get_windowings.m  vN_entropy.m
MATLAB_functions/: get_pairwise_combs.m  load_cooler.m  save_configurations.m  vN_entropy.m
OUTPUT/JULIA/: 40kb_ENT3C_similarity.csv  Chr14_40kb_ENT3C_OUT.csv  Chr14_40kb_ENT3C_similarity.csv  ChrX_NoNorm_ENT3C_OUT.csv  ChrX_NoNorm_ENT3C_similarity.csv  multi_resolutions_ENT3C_OUT.csv  multi_resolutions_ENT3C_similarity.csv  test_updates_ENT3C_OUT.csv  (+3 more)
config/: .config.julia.json.swp  AD.CTL.config.json  config.HFF.pooled.norm.json  config.Norm.json  config.defense.json  config.json  config.julia.json  config.matlab.json  config.multiResolution.noNorm.pooledBRs.json  config.multiResolution.pooledBRs.json  config.normtest.json  config.pooledBRs.json  config.test.json  config.test2.json
julia_version_ENT3C/: ENT3C.jl
matlab_version_ENT3C/: ChiPSeqTests.m  ENT3C.m  magma.m  outputM.txt
(+62 files in other folders)
