[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ENT3C"
version = "2.0.6"
description = "Compute similarity between genomic contact matrices with \"Entropy 3C\" "
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README_PyPi.md"
keywords = ["Hi-C","micro-C","similarity","entropy"]
authors = [
  { name = "Xenia Lainscsek", email = "108679125+X3N1A@users.noreply.github.com"}
]
dependencies = [
  "cooler>=0.9.0",
  "matplotlib>=3.6.0",
  "numpy>=2.0.0",
  "pandas>=2.3.0"
    ]

# one entry, subcommands in argparse!
[project.scripts]
ENT3C="ENT3C.cli.main:main"

[project.urls]
Repository = "https://github.com/X3N1A/ENT3C"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

